syntax = "proto3";
package article.v1;
option go_package="article/v1;articlev1";

message article{
  uint64  ID = 1; // 唯一标识
  string  Title = 2;
  string  Content = 3;
  Author  Author = 4;
  int64   Ctime = 5;
  int64   Utime = 6;
}

message Author{
  uint64    ID = 1;
  string    Name = 2;
}

service ArticleService {
  rpc GetAuthorArticle(GetAuthorArticleRequest) returns (GetAuthorArticleResponse);
  rpc ListSelf(ListSelfRequest) returns (ListSelfResponse);

  rpc Save(SaveRequest) returns (SaveResponse);
  rpc Publish(PublishRequest) returns (PublishResponse);

  rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);

  rpc GetPublishedByID(GetPublishedByIDRequest) returns (GetPublishedByIDResponse);
  rpc ListPublished(ListPublishedRequest) returns (ListPublishedResponse);
}

message GetAuthorArticleRequest{
  uint64 uid = 1;
  uint64 aid = 2;
}

message GetAuthorArticleResponse{
  article data = 1;
}

message ListSelfRequest{
  uint64  uid = 1;
  int32   limit = 2;
  string  order_by = 3;
  bool    desc = 4;
  int64   lastValue = 5;
}

message ListSelfResponse{
  repeated article data = 1;
}

message SaveRequest{
  article data = 1;
}

message SaveResponse{
}

message PublishRequest{
  article data = 1;
}

message PublishResponse{
}

message WithdrawRequest{
  uint64 aid = 1;
  uint64 uid = 2;
}

message WithdrawResponse{
}

message GetPublishedByIDRequest{
  uint64 aid = 1;
  uint64 uid = 2; // 计划用于阅读相关的审计日志，暂时没用到
}

message GetPublishedByIDResponse{
  article data = 1;
}

message ListPublishedRequest{
  int32   limit = 1;
  string  order_by = 2;
  bool    desc = 3;
  int64   lastValue = 4;
}

message ListPublishedResponse{
  repeated article data = 1;
}

