// interactive.proto
syntax = "proto3";

package intr.v1;
option go_package="intr/v1;intrv1"; //;后为给生成的包起的别名

service LikeService {
    rpc  IncrReadCount(IncrReadCountRequest) returns (IncrReadCountResponse);
    rpc  Like(LikeRequest) returns (LikeResponse);
    rpc  UnLike(UnLikeRequest) returns (UnLikeResponse);
    rpc  Collect(CollectRequest) returns (CollectResponse);
    rpc  GetListBatchOfLikes(GetListBatchOfLikesRequest) returns (GetListBatchOfLikesResponse);
}

message Like {
  uint64 ID = 1;
  int64  LikeCount = 2;
  int64  Ctime = 3;
}

message IncrReadCountRequest {
  string ObjType = 1;
  uint64 ObjID = 2;
}

message IncrReadCountResponse {
}

message LikeRequest {
  string  ObjType = 1;
  uint64  ObjID = 2;
  uint64  uid = 3;
}

message LikeResponse {
}

message UnLikeRequest {
  string  ObjType = 1;
  uint64  ObjID = 2;
  uint64  uid = 3;
}

message UnLikeResponse {
}

message CollectRequest {
  string ObjType = 1;
  uint64 ObjID = 2;
  uint64 uid = 3;
}

message CollectResponse {
}

message GetListBatchOfLikesRequest {
  int32   limit = 1;
  string  order_by = 2;
  bool    desc = 3;
  int64   lastValue = 4;
  string  ObjType = 5;
}

message GetListBatchOfLikesResponse {
  repeated Like data = 1;
}
